--- a/css/style.css
+++ b/css/style.css
@@ -480,8 +480,12 @@ div.parrafo > h4 {
 	font-weight: bold;
 }
 
+.botones {
+	height: 100%;
+}
+
 .botones button {
-	margin-top: 10px;
+	margin: auto;
 }
 
 #cr {
